# Renga_python_shell

./: README.md  release_notes.md
src/renga_py_shell/: .gitignore  CMakeLists.txt  PluginToolButtons.cpp  PluginToolButtons.h  PythonCodeEditor.cpp  PythonCodeEditor.hpp  RengaEventsHandler.cpp  RengaEventsHandler.h  RengaPyShellButtonHandler.cpp  RengaPyShellButtonHandler.h  RengaPyShellPlugin.cpp  RengaPyShellPlugin.h  RengaPyShellPlugin.hpp  ShellWidget.cpp  ShellWidget.h  ShellWidget.ui  main.cpp  python_code_editor.cpp  python_code_editor.hpp  python_code_handler.cpp  python_code_handler.hpp  qt_resources_data.qrc  renga_loader.cpp  renga_loader.hpp  renga_py_shell.pro  renga_py_shell.rndesc  renga_py_shell_d.rndesc  shellwindow.cpp  shellwindow.h  shellwindow.ui  stdafx.h
